
== vNext

=== Features

* Added `smtp` plugin to send alerts by e-mail
  (https://github.com/csmith/goplum/issues/4[#4])
* Added `msteams` plugin for sending messages to
  Microsoft Teams.
* Added `discord` plugin to send alerts to Discord
  (https://github.com/csmith/goplum/issues/16[#16])
* Added `snmp` plugin to check values from SNMP
  (https://github.com/csmith/goplum/issues/26[#26])

=== Changes

* Docker images now include a `/notices` directory containing
  copyright information for all compiled code.
* The `Config` field in the `AlertDetails` struct passed to
  alerts is now correctly populated.

== v0.4.0

=== Features

* Verbose logging can now be suppressed with the quiet flag
  (https://github.com/csmith/goplum/issues/29[#29])
* GoPlum now exposes a gRPC API to allow for custom tooling
  and integration with other services.
  See the link:docs/api.adoc[API docs] for further information.
  (https://github.com/csmith/goplum/issues/30[#30])
* Checks can now be suspended and resumed (via the API), for
  e.g. planned maintenance
  (https://github.com/csmith/goplum/issues/31[#31])
* Added `plumctl` command line tool that uses the API to
  interact with a GoPlum instance.
  See the link:docs/plumctl.adoc[plumctl docs] for further
  information.
* The configuration file now supports plugin-specific
  config via `plugin <identifier> {}` blocks.
  (https://github.com/csmith/goplum/issues/33[#33])
* Added a `heartbeat` plugin to enable monitoring or periodic/offline
  tasks such as cron jobs. See the
  link:plugins/heartbeat[heartbeat documentation] for more information.
  (https://github.com/csmith/goplum/issues/32[#32])

=== Changes

* Small improvement to error messages for invalid config keys
* GoPlum now errors if checks or alerts have duplicate names
  (this was previously documented but not enforced)
* Plugins can now implement the Validator interface to check
  their own configuration in the same way as Alerts and Checks