@@ -40,8 +40,10 @@ check heartbeat.received "received" {
 check http.get "get" {
   url = "https://www.example.com/"
   content = "Example Domain"                # optional
-  content_expected = false                  # optional
+  content_expected = false                  # optional (default=true)
   certificate_validity = 10d                # optional
+  min_status_code = 400                     # optional (default=100)
+  max_status_code = 499                     # optional (default=399)
   auth {
     username = "acidburn"                   # optional
     password = "HackThePlanet"              # optional
